--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/azlehria/0xbitcoin-gpuminer.git"
-  },
+  }, 
+  "engines": {	
+    "node": ">=8.9"	
+  }
   "description": "Open-Source CUDA 0xBitcoin (0xBTC) Miner",
   "main": "index.js",
   "scripts": {
