--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jayson": "^2.0.5",
     "mkdirp": "^0.5.1",
     "nan": "^2.9.2",
+    "node-fetch": "^2.2.0",
     "node-localstorage": "^1.3.0",
     "prompt": "^1.0.0",
     "web3": "^1.0.0-beta.29",
